--- a/submission project/wiki/encyclopedia/templates/encyclopedia/entry_page_layout.html
+++ b/submission project/wiki/encyclopedia/templates/encyclopedia/entry_page_layout.html
@@ -22,7 +22,7 @@
                     <a href="{% url 'create-new' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random-wiki' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
